--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,13 +22,15 @@ h2 {
 	font-family: $type-body;
 }
 
-img.question-image {
-	display: block;
-	margin: 10px auto;
-	max-width: 250px;
-	width: 100%;
-	height: auto;
-	border: 1px solid $grayC;
+img {
+	.question-image {
+		display: block;
+		margin: 10px auto;
+		max-width: 250px;
+		width: 100%;
+		height: auto;
+		border: 1px solid $grayC;
+	}
 }
 
 #personality-quiz {
@@ -100,4 +102,20 @@ img.question-image {
 		clear: both;
 		cursor: pointer;
 	}
+
+	.picture {
+	  width: 200px;
+	}
+
+	.results {
+		text-align: center;
+		font-size: 7em;
+	}
+
+	// .picked {
+	// 	border-color: #222;
+	// 	// font-weight: 700;
+	// 	background-color: rgb(250, 174, 0);
+	// }
+
 }
