--- a/css/style.css
+++ b/css/style.css
@@ -680,30 +680,26 @@ textarea {
   font-weight: 600;
   font-style: italic; }
 body {
-  margin: 20px;
+  padding: 20px 20px 0 20px;
   font-size: 16px; }
 
-h1, h2 {
-  font-weight: normal; }
-
-h1 {
+.skift-quiz ul {
+  list-style: none;
+  padding-left: 0; }
+.skift-quiz .title {
+  font-family: Adelle, "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
   border-bottom: 1px solid #999999;
-  text-align: left;
-  font-size: 2em;
-  font-family: Adelle, "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif; }
+  font-size: 2em; }
+.skift-quiz .pager {
+  font-size: .825em;
+  color: #999999;
+  float: right; }
+.skift-quiz .question {
+  font-size: 1.5em; }
 
-h2 {
-  margin: 20px 0;
-  font-size: 1.5em;
-  font-family: "Proxima Nova", "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif; }
-
-img .question-image {
-  display: block;
-  margin: 10px auto;
-  max-width: 250px;
-  width: 100%;
-  height: auto;
-  border: 1px solid #cccccc; }
+img {
+  max-width: 300px;
+  max-height: 200px; }
 
 #personality-quiz li {
   display: inline-block;
