--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,6 +28,10 @@ $red: #ce3636;
 		list-style: none;
 		padding-left: 0;
 		margin: 0;
+		li {
+			margin: 1em;
+			padding: 10px;
+		}
 	}
 	.title {
 		font-family: $type-display;
@@ -53,8 +57,8 @@ $red: #ce3636;
 	}
 	.choices-block {
 		a.choice {
-			margin: 1em 0;
-			display: block;
+			// margin: 1em 0;
+			display: inline-block;
 			text-decoration: none;
 			color: $black;
 			clear: both;
