--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,7 +8,6 @@ body {
 	font-size: 16px;
 	line-height: 1.5em;
 	font-family: $type-body;
-	height: 2000px;
 }
 
 // Skift Quiz styling
@@ -29,8 +28,7 @@ $red: #ce3636;
 		padding-left: 0;
 		margin: 0;
 		li {
-			margin: 1em;
-			padding: 10px;
+			margin: 1em 0;
 		}
 	}
 	.title {
@@ -53,19 +51,18 @@ $red: #ce3636;
 	}
 	.question-image {
 		width: 100%;
-		height: auto;
+		max-height: 200px;
 	}
 	.choices-block {
 		a.choice {
 			// margin: 1em 0;
-			display: inline-block;
+			display: block;
 			text-decoration: none;
 			color: $black;
 			clear: both;
 			img {
 				// use susy styling to place this; hiding for now
-				@include container;
-				@include span-columns(8,9);
+				display: none;
 			}
 			span.box {
 				font-family: sans-serif;
@@ -87,135 +84,87 @@ $red: #ce3636;
 	.explanation {
 		display: none;
 	}
-}
 
-// body {
-// 	margin: 20px;
-// 	font-size: 16px;
-// }
+	&.personality-quiz {
 
-// h1, h2 {
-// 	font-weight: normal;
-// }
+		li {
+			// @include cta;
+		}
 
-// h1 {
-// 	border-bottom: 1px solid $gray9;
-// 	text-align: left;
-// 	font-size: 2em;
-// 	font-family: $type-display;
-// }
+		ol, ul {
+			list-style: none;
+			padding-left: 0;
+		}
 
-// h2 {
-// 	margin: 20px 0;
-// 	font-size: 1.5em;
-// 	font-family: $type-body;
-// }
+		p.pager {
+			margin: 5px 0;
+			font-family: $type-body;
+			color: $midgray;
+		}
 
-// img {
-// 	.question-image {
-// 		display: block;
-// 		margin: 10px auto;
-// 		max-width: 250px;
-// 		width: 100%;
-// 		height: auto;
-// 		border: 1px solid $grayC;
-// 	}
-// }
+		strong {
+			font-weight: 700;
+		}
 
-#personality-quiz {
+		.choice-block {
+			display: block;
+			margin: 0;
+			padding: 0;
+			list-style: none;
+		}
 
-	li {
-		@include cta;
+		.explanation {
+			position:  relative;
+			left:  0px;
+			z-index:  -1;
+			display:  inline-block;
+			float: left;
+			overflow: hidden;
+			margin: 3px;
+			padding: 0 0 20px 0;
+			width:  400px;
+			height:  100%;
+			height:  800px;
+			background: $lightyellow;
+			text-align:  center;
+			font-size:  1.3em;
+			line-height:  1.3;
+		}
+
+		.frame {
+			width:  600px;
+			background:  #FFE099;
+			padding:  10px;
+			margin:  3px;
+			position:  absolute;
+			left:  0;
+			height:  800px;
+		}
+
+		.submitbutton {
+			@include cta;
+			clear: both;
+			float: left;
+			cursor:  pointer;
+			text-align:  center;
+		}
+
+		.choice-box {
+			width: auto;
+			text-align: center;
+			margin: 5px auto;
+			clear: both;
+			cursor: pointer;
+		}
+
+		.results {
+			text-align: center;
+			font-size: 7em;
+		}
 	}
-
-	ol, ul {
-		list-style: none;
-		padding-left: 0;
-	}
-
-	p.pager {
-		margin: 5px 0;
-		font-family: $type-body;
-		color: $midgray;
-	}
-
-	strong {
-		font-weight: 700;
-	}
-
-	#choice-block {
-		display: block;
-		margin: 0;
-		padding: 0;
-		list-style: none;
-	}
-
-	#explanation {
-		position:  relative;
-		left:  0px;
-		z-index:  -1;
-		display:  inline-block;
-		float: left;
-		overflow: hidden;
-		margin: 3px;
-		padding: 0 0 20px 0;
-		width:  400px;
-		height:  100%;
-		height:  800px;
-		background: $lightyellow;
-		text-align:  center;
-		font-size:  1.3em;
-		line-height:  1.3;
-	}
-
-	#frame {
-		width:  600px;
-		background:  #FFE099;
-		padding:  10px;
-		margin:  3px;
-		position:  absolute;
-		left:  0;
-		height:  800px;
-	}
-
-	#submitbutton {
-		@include cta;
-		clear: both;
-		float: left;
-		cursor:  pointer;
-		text-align:  center;
-	}
-
-	.choice-box {
-		width: auto;
-		text-align: center;
-		margin: 5px auto;
-		clear: both;
-		cursor: pointer;
-	}
-
-	// .choice-box {
-	// 	float: left;
-	// 	display: block;
-	// 	max-width: 300px;
-	// 	width: auto;
-	// 	text-align: center;
-	// 	margin: 5px auto;
-	// 	clear: both;
-	// 	cursor: pointer;
-	// }
-
-	.results {
-		text-align: center;
-		font-size: 7em;
-	}
-
-
-}
 
 	.chosen {
-		// border-color: #222;
-		font-weight: 700;
+		// font-weight: 700;
 		background-color: rgb(250, 174, 0);
 	}
-
+}
