--- a/scss/style.scss
+++ b/scss/style.scss
@@ -51,7 +51,9 @@ $red: #ce3636;
 	}
 	.question-image {
 		width: 100%;
-		max-height: 200px;
+		min-height: 200px;
+		background-repeat: no-repeat;
+		background-size: contain;
 	}
 	.choices-block {
 		a.choice {
@@ -79,6 +81,7 @@ $red: #ce3636;
 	.submit {
 		.submit-button {
 			@include cta;	
+			float: none;
 		}
 	}
 	.explanation {
@@ -114,39 +117,31 @@ $red: #ce3636;
 		}
 
 		.explanation {
-			position:  relative;
-			left:  0px;
-			z-index:  -1;
-			display:  inline-block;
+			position: relative;
+			left: 0px;
+			z-index: -1;
+			display: inline-block;
 			float: left;
 			overflow: hidden;
 			margin: 3px;
 			padding: 0 0 20px 0;
-			width:  400px;
-			height:  100%;
-			height:  800px;
+			width: 400px;
+			height: 100%;
+			height: 800px;
 			background: $lightyellow;
-			text-align:  center;
-			font-size:  1.3em;
-			line-height:  1.3;
+			text-align: center;
+			font-size: 1.3em;
+			line-height: 1.3;
 		}
 
 		.frame {
-			width:  600px;
-			background:  #FFE099;
-			padding:  10px;
-			margin:  3px;
-			position:  absolute;
-			left:  0;
-			height:  800px;
-		}
-
-		.submitbutton {
-			@include cta;
-			clear: both;
-			float: left;
-			cursor:  pointer;
-			text-align:  center;
+			width: 600px;
+			background: #FFE099;
+			padding: 10px;
+			margin: 3px;
+			position: absolute;
+			left: 0;
+			height: 800px;
 		}
 
 		.choice-box {
@@ -159,7 +154,7 @@ $red: #ce3636;
 
 		.results {
 			text-align: center;
-			font-size: 7em;
+			padding: 1em;
 		}
 	}
 
